<resources>
    <string name="app_name">A2Z Service Provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView_welcome">Welcome\nBack</string>
    <string name="textView_register">Register Here</string>
    <string name="noTechnician">"Sorry!" + "\n\n No technician found nearby."</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!-- settings strings -->
        <string name="action_settings">Settings</string>
        <string name="title_activity_settings">Settings</string>

        <string name="pref_title_ringtone">Ringtone</string>
        <string name="pref_ringtone_silent">Silent</string>

        <string name="default_gallery_storage">My Videos</string>
        <string name="title_auto_upload">Auto upload</string>
        <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
        <string name="title_upload_quality">Upload Quality</string>
        <string name="summary_upload_video_quality">Specify video quality for uploads</string>
        <string name="pref_title_notifications">Notifications</string>
        <string name="summary_choose_ringtone">Choose notification sound</string>
        <string name="pref_header_about">About</string>
        <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
        <string name="app_version">3.5</string>
        <string name="summary_support">Got any queries? We are happy to help!</string>
        <string name="title_send_feedback">Send Feedback</string>
        <string name="title_faq">FAQ</string>
        <string name="summary_faq">View frequently asked questions</string>
        <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
        <string name="privacy_policy">Privacy Policy</string>
        <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
        <string name="title_terms">Terms &amp; Conditions</string>
        <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
        <string name="title_version">Version</string>
        <string name="choose_email_client">Choose email client</string>
        <string name="title_gallery_storage">Default Storage</string>
        <string name="title_new_notification_sound">New message notification</string>
        <string name="title_vibrate">Vibrate</string>
        <string name="summary_vibrate">Vibrate on new notification</string>
        <string name="key_upload_over_wifi">key_upload_over_wifi</string>
        <string name="key_gallery_name">key_gallery_name</string>
        <string name="key_upload_quality">key_upload_quality</string>
        <string name="notifications_new_message">notifications_new_message</string>
        <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
        <string name="key_vibrate">key_vibrate</string>
        <string name="key_send_feedback">key_send_feedback</string>
        <string name="key_username">key_user_name</string>
        <string name="key_category_gen">General</string>
        <string name="key_useremail">key_user_email</string>
        <string name="key_userpass">key_user_pass</string>


    <!-- Profile Pic -->
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>


</resources>
